feature: release 1 (#5)
* feat: zwischencommit wegen ngrx-schematics

* feat: gefaesstypeResolver tests, delete API changed

* feat: started with gefaesstyp.effects

* feat: checkliste für nächstes Mal

* umbenennung Verzeichnisse

* effects: tests

* maven-mixins eingebaut

* mixin-version fixed

* viele frontendtests und gefaesstypen-list

* deepFreeze ohne any

* frontend: Komponententests

* edit-gefaesstypen started

* einmal durchformatiert mit neuer prettier-config

* gaefaesstyp-overview mit BEM

* navbar mit BEM

* BEM in gefaesstypen.list, styles.scss minimiert

* layout sidenav gefixed

* sidenav - zurück zu button

* layout home component fertig

* attribute theme button in den ThemeStore

* enable deep links on edit gefaesstyp

* gefaesstypenFacade: ensureGefaesstypenLoadedAndSelect implementiert und getestet

* gefaesstypen.effects: gefaesstypEditorNavigationFailed$ implementiert und getestet

* Inventur actions-flow begonnen, edit gefaesstyp form begonnen

* weitere features in EditGefaesstypComponent

* insert gefaesstypen im FE, signal statt action für Eindeutigkeitsprüfung

* Rücknavigation nach dem Speichern

* cancel edit angebunden

* message.service: Tests

* message component, loading indicator, interceptors und backend angebunden

* start Einbau auth

* login funktioniert jetzt

* RBAC korrigiert

* backend tests fixed

* ein paar tests korrigiert, buildscripts

* title im index.html geändert

* erste Version produktiv